# base_shop

./: index.html  main.py  pyproject.toml
