[tool.poetry]
name = "base-shop"
version = "0.1.0"
description = ""
authors = ["Serov Ivan <serovvans@yandex.ru>"]
readme = "README.md"
packages = [{include = "base_shop"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
